--- a/package.json
+++ b/package.json
@@ -1,3 +1,14 @@
-"scripts": {
-  "start": "node index.js"
+{
+  "name": "mega-uploader-bot",
+  "version": "1.0.0",
+  "description": "A Telegram bot for uploading files to Mega",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "telegraf": "^4.4.2",
+    "megajs": "^1.1.0",
+    "dotenv": "^10.0.0"
+  }
 }
