--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "telegraf": "^4.4.2",
     "megajs": "^1.1.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1" // Ensure node-fetch is also installed
   }
 }
