--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "megajs": "^1.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1" // Ensure node-fetch is also installed
+    "node-fetch": "^2.6.1"
   }
 }
