--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "telegraf": "^4.3.0",
     "megajs": "^1.1.1",
     "dotenv": "^10.0.0",
-    "axios": "^0.27.2",  // Ensure axios is listed here
+    "axios": "^0.27.2",
     "express": "^4.17.1"
   }
 }
